# pyf16

./: .gitignore  API.md  Cargo.toml  README.md  README_zh.md  build.rs  pyf16.pyi  pyproject.toml
.cache/clangd/index/: fr_model.h.10DC3E7939F3D072.idx  fr_plugin.h.99E5676E6DEFDBC5.idx  hashmap.c.CD1E223EDDDD494D.idx  hashmap.h.19DECC25ACA3B1B6.idx  hifi_F16_AeroData.c.99A12AEA461B0A55.idx  hifi_F16_AeroData.h.35522F47F5144AEB.idx  leading_edge_flap.c.FADEE9317724AAE8.idx  leading_edge_flap.h.2132A9B22E873326.idx  lofi_F16_AeroData.c.CED0063814ABEA8C.idx  lofi_F16_AeroData.h.4724589D539C71BF.idx  mexndinterp.c.53C205DE3B7E30A9.idx  mexndinterp.h.5099B0D4F098B3E9.idx  model.c.E2F08E8E9999B941.idx  utils.c.E06F8F6DA287F99A.idx  utils.h.78F09523E5C74722.idx
docs/: API.md
examples/: example1.py  example2.py  example3.py  example4.py  example5.py  example6.py
f16_model/: .gitignore  CMakeLists.txt  info.toml
f16_model/archive/: leading_edge_flap.h
f16_model/include/: fr_model.h  fr_plugin.h  hashmap.h  hifi_F16_AeroData.h  lofi_F16_AeroData.h  mexndinterp.h  utils.h
f16_model/src/: hashmap.c  hifi_F16_AeroData.c  leading_edge_flap.c  lofi_F16_AeroData.c  mexndinterp.c  model.c  utils.c
f16_model/tests/: CMakeLists.txt  test_hifi_loader.c  test_model.c  test_utils.c
f16_model/tests/include/: test_utils.h
src/: binding.rs  block.rs  lib.rs  trim.rs
src/algorithm/: mod.rs  nelder_mead.rs  runge_kutta.rs
src/components/: basic.rs  flight.rs  group.rs  mod.rs
src/model/: control.rs  core.rs  core_output.rs  mod.rs  model_input.rs  model_output.rs  other.rs  state.rs  state_extend.rs
src/plugin/: mod.rs
src/plugin/include/: fr_model.h  fr_plugin.h
src/plugin/model/: ffi.rs  mod.rs  model.rs
src/plugin/plugin/: ffi.rs  mod.rs  plugin.rs
src/pyf16/: __init__.py  _core.pyi
src/solver/: basic.rs  mod.rs  rk.rs
src/utils/: dev.rs  error.rs  logger.rs  matrix.rs  mod.rs  vector.rs
tests/: test1.py
