[package]
name = "pyf16"
version = "0.1.0"
edition = "2021"
authors = ["WindLX <windlxt@outlook.com>"]

[lib]
name = "pyf16"
crate-type = ["cdylib"]

[dependencies]
anyhow = "1.0.91"
env_logger = "0.11.5"
libc = "0.2.161"
libloading = "0.8.5"
log = "0.4.22"
pyo3 = { version = "0.22.5", features = ["extension-module"] }
rayon = "1.10.0"
serde = { version = "1.0.213", features = ["derive"] }
thiserror = "1.0.65"
toml = "0.8.19"
uuid = { version = "1.11.0", features = [
    "v4",
    "fast-rng",
    "macro-diagnostics",
] }

[dev-dependencies]
csv = "1.3.0"
