[package]
name = "pyf16"
version = "0.1.1"
edition = "2021"
authors = [
    "WindLX <windlxt@outlook.com>",
]

[lib]
name = "_core"
# "cdylib" is necessary to produce a shared library for Python to import from.
crate-type = [
    "cdylib",
]

[dependencies]
# "extension-module" tells pyo3 we want to build an extension module (skips linking against libpython.so)
# "abi3-py39" tells pyo3 (and maturin) to build using the stable ABI with minimum Python version 3.9
pyo3 = { version = "0.23.3", features = [
    "extension-module",
    "abi3-py39",
] }
anyhow = "1.0.94"
libc = "0.2.167"
libloading = "0.8.6"
log = "0.4.22"
rayon = "1.10.0"
serde = { version = "1.0.215", features = [
    "derive",
] }
thiserror = "2.0.5"
toml = "0.8.19"
uuid = { version = "1.11.0", features = [
    "v4",
    "fast-rng",
    "macro-diagnostics",
] }
pyo3-log = "0.12.0"


[dev-dependencies]
csv = "1.3.1"
env_logger = "0.11.5"
